# personal-medical-assistant

./: README.md  pyproject.toml
app/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/agent/: dependencies.py  graph_builder.py  nodes.py  orchestration.py  utils.py
app/config/: schemas.py  settings.py  state.py
app/core/: llm.py
app/memory/: postgres.py
app/prompts/: 1_input_guardrail.md  2_emergency_response.md  2_ensure_details.md  3_medical_supervisor.md  3_profile_extractor.md  4_allopathy_agent.md  4_ayurveda_agent.md  4_lifestyle_agent.md  4_tcm_kampo_agent.md  5_synthesis.md  6_contraindication_check.md  7_adjustment.md  8_profile_extractor.md  allopathy.md  ayurveda.md  disclaimer.md  general_agent.md  medical_response.md  query_classifier.md  response_generator.md  system_prompt.md  tool_response.md
app/service/: lifespan.py  routes.py  utils.py
docs/: orchestration.md
scripts/: chatbot.py  user_profile_db_lookup.sh
tmp/: verify_postgres.py
tmp/script/: chat_history.py  chat_history.sql  response_memory.py  script.py  sql_queries.sh  streamlit_ui.py
